[gd_scene load_steps=6 format=3 uid="uid://bix03e0wdjuor"]

[ext_resource type="PackedScene" uid="uid://bsjd7x05gaifn" path="res://scenes/collectable_item.tscn" id="1_pwhbb"]
[ext_resource type="Texture2D" uid="uid://3lvrs51f25aa" path="res://sprites/items/blast.png" id="2_1eogj"]
[ext_resource type="Script" uid="uid://bk63llnjrvpo1" path="res://scripts/blast_item.gd" id="2_obo54"]

[sub_resource type="CircleShape2D" id="CircleShape2D_hn4ow"]
radius = 9.0

[sub_resource type="SpriteFrames" id="SpriteFrames_6s64y"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_1eogj")
}],
"loop": true,
"name": &"default",
"speed": 0.0
}]

[node name="BlastItem" instance=ExtResource("1_pwhbb")]
collision_layer = 0
collision_mask = 2
script = ExtResource("2_obo54")
radius = 8
bullet_count = 16
icon_texture = ExtResource("2_1eogj")

[node name="CollisionShape2D" parent="." index="0"]
shape = SubResource("CircleShape2D_hn4ow")
disabled = false

[node name="AnimatedSprite2D" parent="." index="1"]
sprite_frames = SubResource("SpriteFrames_6s64y")
autoplay = "default"

[node name="Lasting_Time" type="Timer" parent="." index="2"]
wait_time = 3.0
one_shot = true

[node name="Delta_time" type="Timer" parent="." index="3"]
wait_time = 0.15

[connection signal="timeout" from="Lasting_Time" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Delta_time" to="." method="_on_delta_time_timeout"]
